fix(components): increase gap between nav items in `post-header` (#8058)
## 📄 Description

Please include a summary of the changes made in this PR.

## 🚀 Demo

If applicable, please add a screenshot or video to illustrate the
changes.

---

## 🔮 Design review

- [ ] Design review done
- [ ] No design review needed

## 🧪 Visual regression tests

- [ ] Visual changes detected and approved _(Check this box if VRT fails
and changes are intentional)_

## 📝 Checklist

- ✅ My code follows the style guidelines of this project
- 🛠️ I have performed a self-review of my own code
- 📄 I have made corresponding changes to the documentation
- ⚠️ My changes generate no new warnings or errors
- 🧪 I have added tests that prove my fix is effective or that my feature
works
- ✔️ New and existing unit tests pass locally with my changes

--- a/packages/components/src/components/post-language-menu/post-language-menu.scss
+++ b/packages/components/src/components/post-language-menu/post-language-menu.scss
@@ -30,5 +30,7 @@ tokens.$default-map: components.$post-button;
 }
 
 .post-language-menu-list {
+  display: flex;
+  gap: 0.5rem;
   margin-top: 1rem;
 }
